--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - name: AWS SSM Send-Command
         uses: peterkimzz/aws-ssm-send-command@v1.1.1
-        with:
-          # AWS access key id
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # AWS secret access key
+        with:          
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}          
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          
           # Where EC2 instance is
           aws-region: ${{ secrets.AWS_REGION }}
           # AWS EC2 Instance id or ids
