--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,31 @@
-version: "3"
 services:
   book-portal-be:
     image: ugurcanerdogan/book-portal-be:latest
     container_name: "book-portal-be"
+    networks:
+      - book-portal-network
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql_container:3306/book_portal
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: rootpassword
 
   book-portal-fe:
     image: ugurcanerdogan/book-portal-fe:latest
     container_name: "book-portal-fe"
     depends_on:
       - book-portal-be
+    networks:
+      - book-portal-network
+
   proxy:
     image: ugurcanerdogan/book-portal-proxy:latest
     container_name: "book-portal-proxy"
     restart: always
     ports:
       - "80:80"
+    networks:
+      - book-portal-network
+
+networks:
+  book-portal-network:
+    external: true
