--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -23,7 +23,7 @@ jobs:
           # AWS EC2 Instance id or ids
           instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
           # Command execution location
-          working-directory: /home/ec2-user
+          working-directory: /home/ubuntu/book-portal
           # Bash command you want to execute
           command: |
             sudo docker-compose stop
