--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -17,19 +17,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}          
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          
-          # Where EC2 instance is
           aws-region: ${{ secrets.AWS_REGION }}
-          # AWS EC2 Instance id or ids
           instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
-          # Command execution location
+          
           working-directory: /home/ubuntu/book-portal
-          # Bash command you want to execute
           command: |
-            sudo docker-compose stop
-            sudo docker-compose rm -f
-            sudo docker-compose pull
-            sudo docker-compose up -d
+            sudo docker compose stop
+            sudo docker compose rm -f
+            sudo docker compose pull
+            sudo docker compose up -d
             sudo docker image prune -af
           # Comment for Send-Command
           comment: docker-compose.yml file re-pulls newer versions of book-portal images and runs them on the instance.
