--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: './book-portal-fe/package-lock.json'
+        # cache: 'npm'
+        # cache-dependency-path: './book-portal-fe/package-lock.json'
 
     - run: npm ci
       working-directory: ./book-portal-fe
