--- a/book-portal-be/src/main/resources/application.yaml
+++ b/book-portal-be/src/main/resources/application.yaml
@@ -2,11 +2,11 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  # datasource:
-  #   username: root
-  #   password: rootpassword
-  #   driver-class-name: com.mysql.cj.jdbc.Driver
-  #   url: jdbc:mysql://mysql_container:3306/book_portal
+  datasource:
+    username: admin
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://database-1.cvssqc4aef2c.us-west-2.rds.amazonaws.com:3306/book_portal
 #    hikari:
 #      connection-timeout: 12000
   jpa:
