--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -11,22 +11,31 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: AWS SSM Send-Command
-        uses: peterkimzz/aws-ssm-send-command@v1.1.1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v4
         with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_REGION }}
-          instance-ids: ${{ secrets.AWS_INSTANCE_ID }}
-          
-          working-directory: /home/ubuntu/book-portal
-          command: |
-            sudo docker compose stop
-            sudo docker compose rm -f
-            sudo docker compose pull
-            sudo docker compose up -d
-            sudo docker image prune -af
-          # Comment for Send-Command
-          comment: docker-compose.yml file re-pulls newer versions of book-portal images and runs them on the instance.
+
+      - name: Run SSM Command
+        run: |
+          aws ssm send-command \
+            --targets "Key=instanceIds,Values=${{ secrets.AWS_INSTANCE_ID }}" \
+            --comment "docker-compose.yml file re-pulls newer versions of book-portal images and runs them on the instance." \
+            --document-name "AWS-RunShellScript" \
+            --region "${{ secrets.AWS_REGION }}" \
+            --output text \
+            --query "Command.CommandId" \
+            --parameters 'commands=[
+              "cd /home/ubuntu/book-portal",
+              "sudo docker compose stop",
+              "sudo docker compose rm -f",
+              "sudo docker compose pull",
+              "sudo docker compose up -d",
+              "sudo docker image prune -af"
+            ]'
